--- a/SSD-Alkolq/SSD-Alkolq.csproj
+++ b/SSD-Alkolq/SSD-Alkolq.csproj
@@ -1,15 +1,8 @@
-<Project Sdk="Microsoft.NET.Sdk.Razor">
+<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
-    <RazorLangVersion>3.0</RazorLangVersion>
+    <TargetFramework>netcoreapp3.1</TargetFramework>
     <RootNamespace>SSD_Alkolq</RootNamespace>
   </PropertyGroup>
-
-
-  <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Components" Version="3.1.13" />
-    <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="3.1.13" />
-  </ItemGroup>
 
 </Project>
