--- a/SSD-Alkolq/appsettings.json
+++ b/SSD-Alkolq/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "AlkolqContext": "Server=(localdb)\\mssqllocaldb;Database=AlkolqContext-271f8ce2-5b57-4065-bde3-b93a2bed7aee;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
