Add customer crud model.

--- a/SSD-Alkolq/SSD-Alkolq.csproj
+++ b/SSD-Alkolq/SSD-Alkolq.csproj
@@ -7,6 +7,7 @@
 
   <ItemGroup>
     <Folder Include="Pages\AlcoholProduct" />
+    <Folder Include="Pages\Customer" />
   </ItemGroup>
 
   <ItemGroup>
