Scaffolded identity code

--- a/SSD-Alkolq/appsettings.json
+++ b/SSD-Alkolq/appsettings.json
@@ -8,6 +8,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "AlkolqContext": "Server=(localdb)\\mssqllocaldb;Database=AlkolqContext-271f8ce2-5b57-4065-bde3-b93a2bed7aee;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "AlkolqContext": "Server=(localdb)\\mssqllocaldb;Database=AlkolqContext-271f8ce2-5b57-4065-bde3-b93a2bed7aee;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "SSD_AlkolqContextConnection": "Server=(localdb)\\mssqllocaldb;Database=SSD-Alkolq;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
