--- a/SSD-Alkolq/SSD-Alkolq.csproj
+++ b/SSD-Alkolq/SSD-Alkolq.csproj
@@ -63,4 +63,11 @@
     <PackageReference Include="SendGrid" Version="9.24.1" />
   </ItemGroup>
 
+	<ProjectExtensions>
+		<VisualStudio>
+			<UserProperties wwwroot_4lib_4bootstrap_4dist_4css_4bootstrap-reboot_1css_1map__JsonSchema="" />
+		</VisualStudio>
+	</ProjectExtensions>
+
+
 </Project>
